<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <android.support.v7.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="match_parent" android:scrollbars="horizontal" android:id="@+id/photoRecyclerView"
            tools:layout_editor_absoluteY="33dp" tools:layout_editor_absoluteX="0dp">
    </android.support.v7.widget.RecyclerView>
    <View
            android:layout_width="0dp"
            android:layout_height="0dp" android:id="@+id/invitationHoderview"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/photoRecyclerView" app:layout_constraintVertical_bias="1.0"
            android:background="@drawable/animation_list"
            android:layout_marginTop="80dp"/>

    <TextView
            android:text="@string/we"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="@+id/invitationHoderview" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" app:fontFamily="casual" android:textSize="12sp" android:textStyle="bold"
            android:layout_marginTop="40dp" app:layout_constraintTop_toBottomOf="@+id/arrowIconImageView"/>
    <TextView
            android:text="@string/name1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView2"
            app:fontFamily="cursive"
            android:textSize="30sp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>
    <TextView
            android:text="@string/and"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView3"
            app:fontFamily="casual"
            android:textSize="12sp" android:textStyle="bold"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>
    <TextView
            android:text="@string/nam2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView4"
            app:fontFamily="cursive"
            android:textSize="30sp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>
    <TextView
            android:text="@string/requestText"
            android:layout_width="254dp"
            android:layout_height="21dp"
            android:id="@+id/textView5"
            android:maxLines="2" android:lines="2"
            android:inputType="textMultiLine" app:fontFamily="casual" android:textSize="12sp" android:textStyle="bold"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/textView4"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>
    <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp" app:srcCompat="@drawable/uparrow2"
            android:id="@+id/arrowIconImageView" app:layout_constraintEnd_toEndOf="@+id/invitationHoderview"
            app:layout_constraintStart_toStartOf="@+id/invitationHoderview" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="@+id/invitationHoderview"/>
    <TextView
            android:text="@string/requestText2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView6"
            app:fontFamily="casual"
            android:textSize="12sp" android:textStyle="bold"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView5"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>
    <TextView
            android:text="@string/onText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView7"
            app:fontFamily="casual"
            android:textStyle="bold" android:textSize="12sp" tools:layout_editor_absoluteY="385dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView6"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>
    <TextView
            android:text="@string/ceremonyHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView8"
            app:fontFamily="sans-serif-condensed-medium"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/textView7"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>
    <TextView
            android:text="@string/ceremonyBody"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView9"
            app:fontFamily="casual"
            android:textSize="12sp" android:textStyle="bold"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView8"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>
    <TextView
            android:text="@string/ceremonyVenue1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView10"
            app:fontFamily="casual" android:textSize="12sp" android:textStyle="bold"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView9"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>
    <TextView
            android:text="@string/receptionHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView11"
            app:fontFamily="sans-serif-condensed-medium"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/textView10"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>
    <TextView
            android:text="@string/receptionBody"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView12"
            app:fontFamily="casual"
            android:textSize="12sp" android:textStyle="bold"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView11"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>
    <TextView
            android:text="@string/receptionVenue1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView13"
            app:fontFamily="casual" android:textSize="12sp" android:textStyle="bold"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView12"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>
    <TextView
            android:text="@string/contactNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView14"
            app:fontFamily="sans-serif"
            android:textSize="12sp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/textView13"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>
    <com.example.newphoto.InfiniteRotationView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/iRView" app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            android:background="@color/colorAccent"/>
</android.support.constraint.ConstraintLayout>